# lab-09-producer-consumer

./: CMakeLists.txt  menu.hpp
demo/: main.cpp
include/: Downloader.hpp  Parser.hpp  main.hpp  menu.hpp  pageContainer.hpp  suggestions.hpp
scripts/: checks.sh
sources/: CPP.cpp  lab7.cpp  main.cpp  menu.cpp  suggestions.cpp
tests/: test.cpp
